k8s/sn-app-web/sn-app-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sn-app-web-deployement
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sn-app-web
  template:
    metadata:
      labels:
        app: sn-app-web
    spec:
      containers:
      - name: sn-app-web
        image: gcr.io/thesquiggsnet/sn-app-web
        resources:
          requests:
            memory: 128Mi
            cpu: 750m
          limits:
            memory: 512Mi
            cpu: "1"
        ports:
        - containerPort: 3000
          protocol: TCP
