k8s/sn-app-web/sn-app-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sn-app-web-service
spec:
  selector:
    app: sn-app-web
    tier: web
  ports:
  - port: 3000
    protocol: TCP
    name: sn-app-web
    targetPort: 3000
  type: NodePort
