k8s/sn-app-web/sn-app-web-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sn-app-web-ingress
spec:
  backend:
    serviceName: sn-app-web-service
    servicePort: sn-app-web-port
